# physics-room

./: CHANGELOG.md  EXPERIMENT_DESIGN_GUIDE.md  GAME_PLUGIN_QUICKSTART.md  HOW_TO_USE.md  NEXT_STEPS_ROADMAP.md  README.md  ROADMAP_VERBOSE.md  WHITE_PAPER_PHYSICS_ROOM.md  explain_with_ollama.patch  mypy.ini  requirements-dev.txt
deploy/: TLS_AND_AUTH_README.md  (+5 more)
physics engine/: .gitignore  README.md  pyproject.toml  run_grpc_server.py
physics engine/benchmarks/: __init__.py  export_experiment_matrix.py  generate_report.py  run_benchmarks.py
physics engine/benchmarks/reports/: benchmark_results.csv
physics engine/examples/: benchmark_convergence_results.csv  benchmark_harmonic.py  consume_engine.py  engine_stream_splats.py  events_sample.json  export_events_sample.py  export_splats.py  grpc_splat_server.py  log_request.json  replay_from_manifest.py  run_and_save_manifest.py  run_qutip_demo.py
physics engine/examples/artifacts/: manifest-demo-events.json  manifest-demo.json
physics engine/notebooks/: BENCHMARK_RESULTS.md  benchmark_results.ipynb
physics engine/scripts/: generate_protos.sh
physics engine/src/physics_engine/: __init__.py  api.py  chem_visualizer.py  config.py  contracts.py  coordinator.py  engine.py  hamiltonian.py  log_api.py  operators.py
physics engine/tests/: test_benchmarks.py  test_chem_visualizer.py  test_contracts.py  test_coordinator.py  test_experiment_matrix_export.py  test_extensions.py  test_grpc_contract.py  test_log_api_unified.py  test_scientific_experiments.py  test_session_metadata.py  test_splat_vertex_mapping.py
(+61 files in other folders)
