[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "physics-engine"
version     = "0.2.0"
description = "Reusable quantum physics engine - callable as a local API"
requires-python = ">=3.11"

dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "grpcio>=1.65",
    "protobuf>=5.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
    "grpcio-tools>=1.65",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "notebook>=7.2",
]

[tool.setuptools.packages.find]
where = ["src"]
